                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 04-01-2004 fixed: play a song in a folder, goto videos, start a movie, when movie ends the songs is played again
  - 03-01-2004 updated: Chinese (Simple) language file (Thnx to iikii)
  - 02-01-2005 changed: my music, background scanner can be canceled during its first operations 
  - 02-01-2005 updated: sqlitedataset to 0.60 (now in namespace dbiplus)
  - 31-12-2004 added: my music, tag loader thread for playlist
  - 31-12-2004 added: my music, cache for unscanned directories, to allow faster browsing
  - 31-12-2004 added: adapted keymap.xml to take full advantage of the media center extender remote
  - 29-12-2004 added: support for xbox media center extender remote (page+/-, vol+/-)
  - 28-12-2004 added: [ 1092220 ] Fix an exception for DLL Loader
  - 28-12-2004 updated: Finnish language file (Thnx to jutski)
  - 28-12-2004 updated: Polish language file (Thnx to napek)
  - 28-12-2004 fixed: scan of the shoutcast top 500 directory was possible using the context menu
  - 28-12-2004 fixed: shoutcast top 500, first stream disappears when Hide parent folder items is enabled
  - 28-12-2004 fixed: [ 1090394 ] Autoswitch FIX for "ByFiles" type (Thnx to kraqh3d)
  - 28-12-2004 updated: Danish language file (Thnx to twinther)
  - 28-12-2004 fixed: shoutcast playing hangs when cd+g is enabled
  - 27-12-2004 fixed: language code expansion didn't work if running as dash
  - 25-12-2004 changed: removed specification of first subtitle to allow new mplayer.dll to function properly
  - 23-12-2004 fixed: [ 1087503 ] DVD XBE Title being cached in database.
  - 23-12-2004 fixed: Audio cache was always set to 0.